# codecancer

./: .gitignore  .ycm_extra_conf.py.in  CMakeLists.txt  README.md
scripts/: findit.py  preprocess.py  report_matches.py
src/exe/codecancer/: CMakeLists.txt  main.cpp
src/lib/dupscan/: CMakeLists.txt  SourceFileList.hpp  SuffixArray.hpp
src/lib/index/: Bwt.hpp  CMakeLists.txt  CloneHunter.hpp  DuplicationEvent.hpp  DuplicationEventFactory.hpp  EnhancedSuffixArray.hpp  EsaView.hpp  LcpArray.cpp  LcpArray.hpp  LcpInterval.cpp  LcpInterval.hpp  MaximalIntervalFilter.hpp  SourceFile.cpp  SourceFile.hpp  SourceFileList.cpp  SourceIndex.cpp  SourceIndex.hpp  SourceIndexBuilder.cpp  SourceIndexBuilder.hpp  SuffixArray.hpp  prefix.hpp
src/lib/io/: ByteSource.hpp  CMakeLists.txt  PodArray.hpp
src/lib/metrics/: CMakeLists.txt  DuplicateByteCounter.cpp  DuplicateByteCounter.hpp
src/lib/perl_deparse/: CMakeLists.txt  Deparser.cpp  Deparser.hpp
src/lib/reports/: BasicTextReport.cpp  BasicTextReport.hpp  CMakeLists.txt  CpdXmlReport.cpp  CpdXmlReport.hpp  ReportBase.cpp  ReportBase.hpp
src/lib/ui/: BasicReportCommand.cpp  BasicReportCommand.hpp  CMakeLists.txt  CodeCancer.cpp  CodeCancer.hpp  CommandBase.cpp  CommandBase.hpp  IndexCommand.cpp  IndexCommand.hpp  ScanCommand.cpp  ScanCommand.hpp  XmlReportCommand.cpp  XmlReportCommand.hpp
src/lib/util/: CMakeLists.txt  Sequence.hpp  StreamHandler.hpp  TempFile.hpp  Timer.hpp  UnsignedVectorView.hpp
test/lib/dupscan/: CMakeLists.txt  TestCloneHunter.cpp  TestLcpArray.cpp  TestSourceIndex.cpp
test/lib/index/: CMakeLists.txt  TestBwt.cpp  TestCloneHunter.cpp  TestDuplicationEventFactory.cpp  TestEnhancedSuffixArray.cpp  TestLcpArray.cpp  TestMaximalIntervalFilter.cpp  TestSourceFile.cpp  TestSourceIndex.cpp  TestSourceIndexBuilder.cpp  TestSuffixArray.cpp
test/lib/io/: CMakeLists.txt  TestByteSource.cpp  TestRawPodArray.cpp
test/lib/metrics/: CMakeLists.txt  TestDuplicateByteCounter.cpp
test/lib/reports/: CMakeLists.txt  TestReportBase.cpp
test/lib/util/: CMakeLists.txt  TestSequence.cpp  TestUnsignedVectorView.cpp
